# xps

./: .BBSoptions  ACKNOWLEDGMENT  DESCRIPTION  INSTALL  NAMESPACE  NEWS  README  configure  configure.in  configure.vc10.win  configure.win  findroot.pl  findvc.pl
R/: AffyRNAdeg.R  Constructors.R  TreeSetClasses.R  bgcorrect.R  boxplot.dev.R  dabg.call.R  dfw.R  export.R  express.R  farms.R  filter.R  firma.R  fitQC.R  image.dev.R  import.R  import.data.R  import.exon.scheme.R  import.expr.scheme.R  import.genome.scheme.R  ini.call.R  mas4.R  mas5.R  mas5.call.R  methods.AnalysisTreeSet.R  methods.CallTreeSet.R  methods.DataTreeSet.R  methods.ExprTreeSet.R  methods.Filter.R  methods.FilterTreeSet.R  methods.PreFilter.R  methods.ProcesSet.R  methods.ProjectInfo.R  methods.QualTreeSet.R  methods.SchemeTreeSet.R  methods.TreeSet.R  methods.UniFilter.R  mvaplot.dev.R  normalize.R  plot.R  plotBorder.R  (+33 more)
inst/: ACKNOWLEDGMENT  CHANGELOG  README
inst/QC/: QC.begin.Rnw  QC.call.Rnw  QC.data.Rnw  QC.end.Rnw  QC.expr.Rnw  QC.pseudo.fig.Rnw  QC.pseudo.txt.Rnw  QC.qual.Rnw
inst/doc/: APTvsXPS.Rnw  xps.Rnw  xps.Snw  xps.bib  xpsClasses.Rnw  xpsClasses.Snw  xpsPreprocess.Rnw
inst/examples/: macro4XPS.C  script4bestmatch.R  script4exon.R  script4schemes.R  script4xps.R  script4xps2apt.R  script4xpsPreprocess.R  updateAnnotation.R
inst/raw/: TestA1.CEL  TestA2.CEL  TestB1.CEL  TestB2.CEL
inst/rootdata/: DataTest3_cel.root  tmp_Test3RMA.root
inst/rootsrc/: macroDraw.C  macroDrawDensity.C  macroDrawImage.C  macroDrawLeaves.C  macroDrawProfilePlot.C  macroOpenBrowser.C
inst/schemes/: SchemeTest3.root
man/: AffyRNAdeg.Rd  AnalysisTreeSet-class.Rd  CallTreeSet-class.Rd  DataTreeSet-class.Rd  ExprTreeSet-class.Rd  Filter-class.Rd  FilterTreeSet-class.Rd  NUSE.Rd  PreFilter-class.Rd  PreFilter-constructor.Rd  ProcesSet-class.Rd  ProjectInfo-class.Rd  ProjectInfo-constructor.Rd  QualTreeSet-class.Rd  RLE.Rd  ROOT.Rd  SchemeTreeSet-class.Rd  TreeSet-class.Rd  UniFilter-class.Rd  UniFilter-constructor.Rd  addData-methods.Rd  attachBgrd-methods.Rd  attachCall-methods.Rd  attachData-methods.Rd  attachDataXY-methods.Rd  attachExpr-methods.Rd  attachInten-methods.Rd  attachMask-methods.Rd  attachProbe-methods.Rd  attachUnitNames-methods.Rd  bgcorrect.Rd  borderplot-methods.Rd  boxplot-methods.Rd  boxplot.dev.Rd  callFilter-methods.Rd  callplot-methods.Rd  coiplot-methods.Rd  corplot-methods.Rd  cvFilter-methods.Rd  dabg.call.Rd  (+117 more)
src/: Makefile  Makefile.arch  Makefile.vc10.win  Makefile.win  Makefile.win32  Makefile.winMD  Makefile.winVC9  RconfigR.h  RdpqR.h  RmathR.h  RnmathR.h  StatUtils.cxx  StatUtils.h  StatUtilsLinkDef.h  TMLMath.cxx  TMLMath.h  TStat.cxx  TStat.h  XPSAnalysis.cxx  XPSAnalysis.h  XPSAnalyzer.cxx  XPSAnalyzer.h  XPSBase.cxx  XPSBase.h  XPSData.cxx  XPSData.h  XPSDataTypes.cxx  XPSDataTypes.h  XPSFilter.cxx  XPSFilter.h  XPSHybridizer.cxx  XPSHybridizer.h  XPSNormalizer.cxx  XPSNormalizer.h  XPSNormation.cxx  XPSNormation.h  XPSPreProcessing.cxx  XPSPreProcessing.h  XPSProcessing.cxx  XPSProcessing.h  (+12 more)
vignettes/: APTvsXPS.Rnw  xps.Rnw  xpsClasses.Rnw
